--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.0.0",
-    "@angular/common": "~12.0.0",
-    "@angular/compiler": "~12.0.0",
-    "@angular/core": "~12.0.0",
-    "@angular/forms": "~12.0.0",
-    "@angular/platform-browser": "~12.0.0",
-    "@angular/platform-browser-dynamic": "~12.0.0",
-    "@angular/router": "~12.0.0",
+    "@angular/animations": "~12.2.14",
+    "@angular/common": "~12.2.14",
+    "@angular/compiler": "~12.2.14",
+    "@angular/core": "~12.2.14",
+    "@angular/forms": "~12.2.14",
+    "@angular/platform-browser": "~12.2.14",
+    "@angular/platform-browser-dynamic": "~12.2.14",
+    "@angular/router": "~12.2.14",
     "audit": "^0.0.6",
     "fix": "^0.0.6",
+    "ng-zorro-antd": "^12.1.0",
     "npm": "^7.20.5",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
@@ -27,8 +28,8 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.0.0",
-    "@angular/cli": "~12.0.0",
-    "@angular/compiler-cli": "~12.0.0",
+    "@angular/cli": "^12.2.13",
+    "@angular/compiler-cli": "~12.2.14",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.20.19",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
