--- a/package.json
+++ b/package.json
@@ -1,52 +1,51 @@
 {
-  "name": "strava-cleaner",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
-  },
-  "private": true,
-  "dependencies": {
-    "-": "^0.0.1",
-    "@angular/animations": "~12.2.14",
-    "@angular/common": "~12.2.14",
-    "@angular/compiler": "~12.2.14",
-    "@angular/core": "~12.2.14",
-    "@angular/forms": "~12.2.14",
-    "@angular/platform-browser": "~12.2.14",
-    "@angular/platform-browser-dynamic": "~12.2.14",
-    "@angular/router": "~12.2.14",
-    "audit": "^0.0.6",
-    "fix": "^0.0.6",
-    "ng-zorro-antd": "^12.1.0",
-    "npm": "^7.20.5",
-    "renamer": "^4.0.0",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.1.0",
-    "zone.js": "~0.11.4"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "~12.0.0",
-    "@angular/cli": "^12.2.13",
-    "@angular/compiler-cli": "~12.2.14",
-    "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.20.19",
-    "@typescript-eslint/eslint-plugin": "^4.29.1",
-    "@typescript-eslint/parser": "^4.29.1",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.24.0",
-    "eslint-plugin-sonarjs": "^0.10.0",
-    "jasmine-core": "~3.7.0",
-    "karma": "~6.3.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "prettier": "2.3.2",
-    "typescript": "~4.2.3"
-  }
+	"name": "strava-cleaner",
+	"version": "0.0.0",
+	"scripts": {
+		"ng": "ng",
+		"start": "ng serve",
+		"build": "ng build",
+		"watch": "ng build --watch --configuration development",
+		"test": "ng test"
+	},
+	"private": true,
+	"dependencies": {
+		"@angular/animations": "~13.2.5",
+		"@angular/common": "~13.2.5",
+		"@angular/compiler": "~13.2.5",
+		"@angular/core": "~13.2.5",
+		"@angular/forms": "~13.2.5",
+		"@angular/platform-browser": "~13.2.5",
+		"@angular/platform-browser-dynamic": "~13.2.5",
+		"@angular/router": "~13.2.5",
+		"audit": "^0.0.6",
+		"fix": "^0.0.6",
+		"ng-zorro-antd": "^13.1.1",
+		"npm": "^8.5.3",
+		"renamer": "^4.0.0",
+		"rxjs": "^7.5.5",
+		"tslib": "^2.1.0",
+		"zone.js": "^0.11.5"
+	},
+	"devDependencies": {
+		"@angular-devkit/build-angular": "~13.2.5",
+		"@angular/cli": "^13.2.5",
+		"@angular/compiler-cli": "~13.2.5",
+		"@types/jasmine": "^3.10.3",
+		"@types/node": "^17.0.21",
+		"@typescript-eslint/eslint-plugin": "^5.14.0",
+		"@typescript-eslint/parser": "^5.14.0",
+		"eslint": "^8.10.0",
+		"eslint-config-airbnb-base": "^15.0.0",
+		"eslint-plugin-import": "^2.24.0",
+		"eslint-plugin-sonarjs": "^0.12.0",
+		"jasmine-core": "^4.0.1",
+		"karma": "^6.3.17",
+		"karma-chrome-launcher": "~3.1.0",
+		"karma-coverage": "^2.2.0",
+		"karma-jasmine": "~4.0.0",
+		"karma-jasmine-html-reporter": "^1.7.0",
+		"prettier": "^2.5.1",
+		"typescript": "^4.5.5"
+	}
 }
