--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
 		"@angular/platform-browser": "~13.2.5",
 		"@angular/platform-browser-dynamic": "~13.2.5",
 		"@angular/router": "~13.2.5",
+		"@ngx-translate/core": "^14.0.0",
+		"@ngx-translate/http-loader": "^7.0.0",
 		"audit": "^0.0.6",
 		"fix": "^0.0.6",
 		"ng-zorro-antd": "^13.1.1",
