--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
 	"version": "0.0.0",
 	"scripts": {
 		"ng": "ng",
+		"config": "ts-node ./src/config-env.ts",
+		"start-vercel": "npm run config -- --environment=dev && ng serve",
+		"build-vercel": "npm run config -- --environment=prod && ng build",
 		"start": "ng serve",
 		"build": "ng build",
 		"watch": "ng build --watch --configuration development",
@@ -25,6 +28,7 @@
 		"ng-zorro-antd": "^13.1.1",
 		"ngx-cookie-service": "^13.1.2",
 		"npm": "^8.5.3",
+		"path-browserify": "^1.0.1",
 		"renamer": "^4.0.0",
 		"rxjs": "^7.5.5",
 		"tslib": "^2.1.0",
@@ -35,9 +39,9 @@
 		"@angular/cli": "^13.2.5",
 		"@angular/compiler-cli": "~13.2.5",
 		"@types/jasmine": "^3.10.3",
-		"@types/node": "^17.0.21",
 		"@typescript-eslint/eslint-plugin": "^5.14.0",
 		"@typescript-eslint/parser": "^5.14.0",
+		"dotenv": "^16.0.0",
 		"eslint": "^8.10.0",
 		"eslint-config-airbnb-base": "^15.0.0",
 		"eslint-plugin-import": "^2.24.0",
@@ -49,6 +53,7 @@
 		"karma-jasmine": "~4.0.0",
 		"karma-jasmine-html-reporter": "^1.7.0",
 		"prettier": "^2.5.1",
-		"typescript": "^4.5.5"
+		"typescript": "^4.5.5",
+		"yargs": "^17.4.1"
 	}
 }
