add ngx-env to deploy in vercel

--- a/angular.json
+++ b/angular.json
@@ -18,7 +18,7 @@
 			"prefix": "app",
 			"architect": {
 				"build": {
-					"builder": "@angular-devkit/build-angular:browser",
+					"builder": "@ngx-env/builder:browser",
 					"options": {
 						"outputPath": "dist/StravaCleaner",
 						"index": "src/index.html",
@@ -46,8 +46,8 @@
 							"budgets": [
 								{
 									"type": "initial",
-									"maximumWarning": "500kb",
-									"maximumError": "1mb"
+									"maximumWarning": "1mb",
+									"maximumError": "2mb"
 								},
 								{
 									"type": "anyComponentStyle",
@@ -75,7 +75,7 @@
 					"defaultConfiguration": "production"
 				},
 				"serve": {
-					"builder": "@angular-devkit/build-angular:dev-server",
+					"builder": "@ngx-env/builder:dev-server",
 					"configurations": {
 						"production": {
 							"browserTarget": "StravaCleaner:build:production"
@@ -87,13 +87,13 @@
 					"defaultConfiguration": "development"
 				},
 				"extract-i18n": {
-					"builder": "@angular-devkit/build-angular:extract-i18n",
+					"builder": "@ngx-env/builder:extract-i18n",
 					"options": {
 						"browserTarget": "StravaCleaner:build"
 					}
 				},
 				"test": {
-					"builder": "@angular-devkit/build-angular:karma",
+					"builder": "@ngx-env/builder:karma",
 					"options": {
 						"main": "src/test.ts",
 						"polyfills": "src/polyfills.ts",
