--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"@angular-devkit/build-angular": "~13.2.5",
 		"@angular/cli": "^13.2.5",
 		"@angular/compiler-cli": "~13.2.5",
+		"@ngx-env/builder": "^2.0.2",
 		"@types/jasmine": "^3.10.3",
 		"@types/node": "^17.0.21",
 		"@typescript-eslint/eslint-plugin": "^5.14.0",
