--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,13 +15,13 @@
 		"importHelpers": true,
 		"target": "es2017",
 		"module": "es2020",
-		"lib": ["es2018", "dom"]
+		"lib": ["es2018", "dom"],
+		"removeComments": true
 	},
 	"angularCompilerOptions": {
 		"enableI18nLegacyMessageIdFormat": false,
 		"strictInjectionParameters": true,
 		"strictInputAccessModifiers": true,
-		"strictTemplates": true,
-		"comments": false
+		"strictTemplates": true
 	}
 }
