--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -22,6 +22,10 @@ jobs:
         run: |
           npm install
           npm run-script deploy
+          env:
+            NG_APP_CLIENT_ID: ${{ env.NG_APP_CLIENT_ID }},
+            NG_APP_CLIENT_SECRET: ${{ env.NG_APP_CLIENT_SECRET }},
+            NG_APP_URL: ${{ env.NG_APP_URL }}
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@releases/v3
         with:
