--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -7,9 +7,9 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     env:
-      NG_APP_CLIENT_ID: ${{ env.NG_APP_CLIENT_ID }}
-      NG_APP_CLIENT_SECRET: ${{ env.NG_APP_CLIENT_SECRET }}
-      NG_APP_URL: ${{ env.NG_APP_URL }}
+      NG_APP_CLIENT_ID: ${{ secrets.NG_APP_CLIENT_ID }}
+      NG_APP_CLIENT_SECRET: ${{ secrets.NG_APP_CLIENT_SECRET }}
+      NG_APP_URL: ${{ secrets.NG_APP_URL }}
     steps:
       - name: Checkout
         uses: actions/checkout@v1
