--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
           npm install
           npm run-script deploy
-          echo $NG_APP_CLIENT_ID
+          echo "Prueba es:$NG_APP_CLIENT_ID"
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@releases/v3
         with:
