--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"build": "ng build",
 		"watch": "ng build --watch --configuration development",
 		"test": "ng test",
-		"deploy": "ng build --prod --base-href=/STRV-Manager/"
+		"deploy": "ng build --base-href=https://diegoberges.github.io/STRV-Manager/"
 	},
 	"private": true,
 	"dependencies": {
