--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"build": "ng build",
 		"watch": "ng build --watch --configuration development",
 		"test": "ng test",
-		"deploy": "ng build --base-href=/STRV-Manager/"
+		"eslint": "eslint './**/*.{html,scss,js,jsx}'"
 	},
 	"private": true,
 	"dependencies": {
@@ -24,33 +24,35 @@
 		"audit": "^0.0.6",
 		"cypress": "^10.3.0",
 		"fix": "^0.0.6",
-		"ng-zorro-antd": "^13.1.1",
-		"npm": "^8.5.3",
+		"ng-zorro-antd": "^13.3.2",
+		"npm": "^8.14.0",
 		"renamer": "^4.0.0",
-		"rxjs": "^7.5.5",
-		"tslib": "^2.1.0",
-		"zone.js": "^0.11.5"
+		"rxjs": "^7.5.6",
+		"tslib": "^2.4.0",
+		"zone.js": "^0.11.6"
 	},
 	"devDependencies": {
 		"@angular-devkit/build-angular": "~13.2.5",
 		"@angular/cli": "^13.2.5",
 		"@angular/compiler-cli": "~13.2.5",
-		"@ngx-env/builder": "^2.0.2",
+		"@ngx-env/builder": "^2.2.0",
 		"@types/jasmine": "^3.10.3",
 		"@types/node": "^17.0.21",
-		"@typescript-eslint/eslint-plugin": "^5.14.0",
-		"@typescript-eslint/parser": "^5.14.0",
-		"eslint": "^8.10.0",
+		"@typescript-eslint/eslint-plugin": "^5.30.6",
+		"@typescript-eslint/parser": "^5.30.6",
+		"eslint": "^8.20.0",
 		"eslint-config-airbnb-base": "^15.0.0",
-		"eslint-plugin-import": "^2.24.0",
-		"eslint-plugin-sonarjs": "^0.12.0",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-import": "^2.26.0",
+		"eslint-plugin-prettier": "^4.2.1",
+		"eslint-plugin-sonarjs": "^0.13.0",
 		"jasmine-core": "^4.0.1",
 		"karma": "^6.3.17",
-		"karma-chrome-launcher": "~3.1.0",
+		"karma-chrome-launcher": "^3.1.1",
 		"karma-coverage": "^2.2.0",
 		"karma-jasmine": "~4.0.0",
 		"karma-jasmine-html-reporter": "^1.7.0",
-		"prettier": "^2.5.1",
+		"prettier": "^2.7.1",
 		"typescript": "^4.5.5"
 	}
 }
