--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"build": "ng build",
 		"watch": "ng build --watch --configuration development",
 		"test": "ng test",
+		"cypress:open": "cypress open",
 		"eslint": "eslint './**/*.{html,scss,js,jsx}'"
 	},
 	"private": true,
@@ -22,7 +23,6 @@
 		"@ngx-translate/core": "^14.0.0",
 		"@ngx-translate/http-loader": "^7.0.0",
 		"audit": "^0.0.6",
-		"cypress": "^10.3.0",
 		"fix": "^0.0.6",
 		"ng-zorro-antd": "^13.3.2",
 		"npm": "^8.14.0",
@@ -40,6 +40,7 @@
 		"@types/node": "^17.0.21",
 		"@typescript-eslint/eslint-plugin": "^5.30.6",
 		"@typescript-eslint/parser": "^5.30.6",
+		"cypress": "^10.3.1",
 		"eslint": "^8.20.0",
 		"eslint-config-airbnb-base": "^15.0.0",
 		"eslint-config-prettier": "^8.5.0",
