--- a/angular.json
+++ b/angular.json
@@ -107,6 +107,12 @@
 						],
 						"scripts": []
 					}
+				},
+				"lint": {
+					"builder": "@angular-eslint/builder:lint",
+					"options": {
+						"lintFilePatterns": ["src/**/*.ts", "src/**/*.html"]
+					}
 				}
 			}
 		}
@@ -116,5 +122,8 @@
 			"style": "scss"
 		}
 	},
-	"defaultProject": "STRVManager"
+	"defaultProject": "STRVManager",
+	"cli": {
+		"defaultCollection": "@angular-eslint/schematics"
+	}
 }
