--- a/package.json
+++ b/package.json
@@ -1,59 +1,62 @@
 {
-	"name": "strv-manager",
-	"version": "0.0.0",
-	"scripts": {
-		"ng": "ng",
-		"start": "ng serve",
-		"build": "ng build",
-		"watch": "ng build --watch --configuration development",
-		"test": "ng test",
-		"cypress:open": "cypress open",
-		"eslint": "eslint './**/*.{html,scss,js,jsx}'"
-	},
-	"private": true,
-	"dependencies": {
-		"@angular/animations": "~13.2.5",
-		"@angular/common": "~13.2.5",
-		"@angular/compiler": "~13.2.5",
-		"@angular/core": "~13.2.5",
-		"@angular/forms": "~13.2.5",
-		"@angular/platform-browser": "~13.2.5",
-		"@angular/platform-browser-dynamic": "~13.2.5",
-		"@angular/router": "~13.2.5",
-		"@ngx-translate/core": "^14.0.0",
-		"@ngx-translate/http-loader": "^7.0.0",
-		"audit": "^0.0.6",
-		"fix": "^0.0.6",
-		"ng-zorro-antd": "^13.3.2",
-		"npm": "^8.14.0",
-		"renamer": "^4.0.0",
-		"rxjs": "^7.5.6",
-		"tslib": "^2.4.0",
-		"zone.js": "^0.11.6"
-	},
-	"devDependencies": {
-		"@angular-devkit/build-angular": "~13.2.5",
-		"@angular/cli": "^13.2.5",
-		"@angular/compiler-cli": "~13.2.5",
-		"@ngx-env/builder": "^2.2.0",
-		"@types/jasmine": "^3.10.3",
-		"@types/node": "^17.0.21",
-		"@typescript-eslint/eslint-plugin": "^5.30.6",
-		"@typescript-eslint/parser": "^5.30.6",
-		"cypress": "^10.3.1",
-		"eslint": "^8.20.0",
-		"eslint-config-airbnb-base": "^15.0.0",
-		"eslint-config-prettier": "^8.5.0",
-		"eslint-plugin-import": "^2.26.0",
-		"eslint-plugin-prettier": "^4.2.1",
-		"eslint-plugin-sonarjs": "^0.13.0",
-		"jasmine-core": "^4.0.1",
-		"karma": "^6.3.17",
-		"karma-chrome-launcher": "^3.1.1",
-		"karma-coverage": "^2.2.0",
-		"karma-jasmine": "~4.0.0",
-		"karma-jasmine-html-reporter": "^1.7.0",
-		"prettier": "^2.7.1",
-		"typescript": "^4.5.5"
-	}
+  "name": "strv-manager",
+  "version": "0.0.0",
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "watch": "ng build --watch --configuration development",
+    "test": "ng test",
+    "cypress:open": "cypress open",
+    "lint": "ng lint"
+  },
+  "private": true,
+  "dependencies": {
+    "@angular/animations": "~13.2.5",
+    "@angular/common": "~13.2.5",
+    "@angular/compiler": "~13.2.5",
+    "@angular/core": "~13.2.5",
+    "@angular/forms": "~13.2.5",
+    "@angular/platform-browser": "~13.2.5",
+    "@angular/platform-browser-dynamic": "~13.2.5",
+    "@angular/router": "~13.2.5",
+    "@ngx-translate/core": "^14.0.0",
+    "@ngx-translate/http-loader": "^7.0.0",
+    "audit": "^0.0.6",
+    "fix": "^0.0.6",
+    "ng-zorro-antd": "^13.3.2",
+    "npm": "^8.14.0",
+    "renamer": "^4.0.0",
+    "rxjs": "^7.5.6",
+    "tslib": "^2.4.0",
+    "zone.js": "^0.11.6"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "~13.2.5",
+    "@angular-eslint/builder": "13.5.0",
+    "@angular-eslint/eslint-plugin": "13.5.0",
+    "@angular-eslint/eslint-plugin-template": "13.5.0",
+    "@angular-eslint/schematics": "13.5.0",
+    "@angular-eslint/template-parser": "13.5.0",
+    "@angular/cli": "^13.2.5",
+    "@angular/compiler-cli": "~13.2.5",
+    "@ngx-env/builder": "^2.2.0",
+    "@types/jasmine": "^3.10.3",
+    "@types/node": "^17.0.21",
+    "@typescript-eslint/eslint-plugin": "5.27.1",
+    "@typescript-eslint/parser": "5.27.1",
+    "cypress": "^10.3.1",
+    "eslint": "^8.17.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "jasmine-core": "^4.0.1",
+    "karma": "^6.3.17",
+    "karma-chrome-launcher": "^3.1.1",
+    "karma-coverage": "^2.2.0",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.7.0",
+    "prettier": "^2.7.1",
+    "prettier-eslint": "^15.0.1",
+    "typescript": "^4.5.5"
+  }
 }
