update to angular 16

--- a/angular.json
+++ b/angular.json
@@ -119,9 +119,10 @@
 		"@schematics/angular:component": {
 			"style": "scss"
 		}
-	},
-	"defaultProject": "STRVManager",
-	"cli": {
-		"defaultCollection": "@angular-eslint/schematics"
+  },
+  "cli": {
+    "schematicCollections": [
+      "@angular-eslint/schematics"
+    ]
 	}
 }
