--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "strv-manager",
   "version": "0.0.0",
+  "engines": {
+    "node": ">=20.10.0",
+    "npm": ">=10.2.3"
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
