--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,7 @@
 							"src/assets"
 						],
 						"styles": [
-							"src/styles.scss"
+							"src/styles.css"
 						],
 						"scripts": []
 					},
@@ -96,7 +96,7 @@
 						"inlineStyleLanguage": "scss",
 						"assets": ["src/favicon.ico", "src/assets"],
 						"styles": [
-							"src/styles.scss"
+							"src/styles.css"
 						],
 						"scripts": []
 					}
