--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "17.3.1",
     "@ngx-translate/core": "15.0.0",
     "@ngx-translate/http-loader": "8.0.0",
+    "flowbite": "2.3.0",
     "rxjs": "7.8.1",
     "tslib": "2.6.2",
     "zone.js": "0.14.4"
@@ -54,6 +55,7 @@
     "karma-jasmine-html-reporter": "2.1.0",
     "prettier": "3.2.5",
     "prettier-eslint": "16.3.0",
+    "tailwindcss": "3.4.2",
     "typescript": "5.4.3"
   }
 }
